clear index.html, fix package issue

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Microblog</title>
+    <title>Webtama</title>
     <link href="styles/cols.css" rel="stylesheet" type="text/css" />
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
     <link href="styles/messages.css" rel="stylesheet" type="text/css" />
@@ -11,9 +11,9 @@
   </head>
   <body>
     <header>
-      <a href="/" id="title">Microblog</a>
+      <a href="/" id="title">Webtama</a>
       <a href="/login.html" id="signin-button" class="btn header-btn hidden"
-        >Sign in or Sign up</a
+        >Sign in</a
       >
       <a href="users/signout" id="signout-button" class="btn header-btn hidden"
         >Sign out</a
