--- a/backend/static/login.html
+++ b/backend/static/login.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Microblog - Login</title>
+    <title>Webtama - Login</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
     <link href="styles/form.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
-      <a href="/" id="title">Microblog</a>
+      <a href="/" id="title">Webtama</a>
     </header>
 
     <p id="error-box"></p>
